k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../compose.yaml convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../compose.yaml convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: MYSQL_ROOT_PASSWORD
          image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d/db.sql
              name: mysql-initdb
              subPath: db.sql
            - mountPath: /etc/mysql/conf.d/my.cnf
              name: mysql-config
              readOnly: true
              subPath: my.cnf
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-initdb
          configMap:
            name: mysql-initdb
        - name: mysql-config
          configMap:
            name: mysql-config
