k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../compose.yaml convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: php
  name: php
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: php
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../compose.yaml convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: php
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: MYSQL_HOST
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: MYSQL_ROOT_PASSWORD
            - name: REDIS_HOST
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: REDIS_HOST
          image: ghcr.io/andraz87/php:latest
          name: php
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            # ADDED: Mount the PHP-FPM configuration to allow environment variables.
            - mountPath: /usr/local/etc/php-fpm.d/k8s-php-fpm.conf
              name: php-config
              subPath: k8s-php-fpm.conf
      volumes:
        # ADDED: Define the volume for the PHP config.
        - name: php-config
          configMap:
            name: php-config
      restartPolicy: Always
