k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../compose.yaml convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../compose.yaml convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "200m"
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
