k8s/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../compose.yaml convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: caddy
  name: caddy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: caddy
