k8s/php.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: php
spec:
  ports:
    - port: 9000
  selector:
    app: php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: php
spec:
  replicas: 3 # Requirement: At least 3 instances
  selector:
    matchLabels:
      app: php
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: ghcr.io/andraz87/php:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
