k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - devops-vm-42.lrk.si
      secretName: my-app-tls-secret
  rules:
    - host: devops-vm-42.lrk.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
